# TaskManagement

./: .dockerignore  .gitignore  README.md  TaskManagement.sln  docker-compose.yml
TaskManagement.API/: Dockerfile  Program.cs  TaskManagement.API.csproj  appsettings.Docker.json  appsettings.json
TaskManagement.API/Controllers/: TasksController.cs
TaskManagement.API/Properties/: launchSettings.json
TaskManagement.Api/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  schema.sql
TaskManagement.Api/migrations/: 001_workspaces.sql
TaskManagement.Api/src/: auth.rs  cache.rs  config.rs  errors.rs  main.rs  schemas.rs
TaskManagement.Api/src/database/: mod.rs  substep_operations.rs  task_operations.rs  topic_operations.rs  user_operations.rs  workspace_operations.rs  workspace_share_link_operations.rs
TaskManagement.Api/src/models/: mod.rs  task.rs  task_exception.rs  task_substep.rs  topic.rs  user.rs  workspace.rs  workspace_share_link.rs
TaskManagement.Api/src/routes/: auth.rs  mod.rs  shared.rs  substeps.rs  tasks.rs  topics.rs  workspaces.rs
TaskManagement.Core/: TaskManagement.Core.csproj
TaskManagement.Tests/: TaskCategorizationServiceTests.cs  TaskManagement.Tests.csproj  TasksControllerTests.cs
TaskManagement.Tests.Integration/: TaskManagement.Tests.Integration.csproj  TasksApiTests.cs  appsettings.test.json
TaskManagement.Tests.Unit/: TaskManagement.Tests.Unit.csproj
TaskManagement.Web/: .dockerignore  Dockerfile  Program.cs  README.md  TaskManagement.Web.csproj  angular.json  nginx.conf  package-lock.json  package.json
(+84 files in other folders)
